// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus S/4HANA Service Integration (S4-Service) Schematics: ng-add S4-Service feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { S4ServiceModule } from "@spartacus/s4-service";
import { s4ServiceTranslationChunksConfig, s4ServiceTranslationsEn } from "@spartacus/s4-service/assets";
import { S4ServiceCheckoutModule } from "@spartacus/s4-service/checkout";
import { S4ServiceOrderModule } from "@spartacus/s4-service/order";
import { S4ServiceRootModule } from "@spartacus/s4-service/root";

@NgModule({
  declarations: [],
  imports: [
    S4ServiceRootModule,
    S4ServiceModule,
    S4ServiceCheckoutModule,
    S4ServiceOrderModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: s4ServiceTranslationsEn },
      chunks: s4ServiceTranslationChunksConfig,
    },
  })]
})
export class S4ServiceFeatureModule { }
"
`;

exports[`Spartacus S/4HANA Service Integration (S4-Service) Schematics: ng-add S4-Service feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { s4ServiceTranslationChunksConfig, s4ServiceTranslationsEn } from "@spartacus/s4-service/assets";
import { S4_SERVICE_FEATURE, S4ServiceRootModule } from "@spartacus/s4-service/root";

@NgModule({
  declarations: [],
  imports: [
    S4ServiceRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [S4_SERVICE_FEATURE]: {
        module: () =>
          import('@spartacus/s4-service').then((m) => m.S4ServiceModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: s4ServiceTranslationsEn },
      chunks: s4ServiceTranslationChunksConfig,
    },
  })
  ]
})
export class S4ServiceFeatureModule { }
"
`;

exports[`Spartacus S/4HANA Service Integration (S4-Service) Schematics: ng-add S4-Service feature general setup should install the appropriate dependencies 1`] = `
"import { NgModule } from '@angular/core';
import { OrderModule } from "@spartacus/order";
import { S4ServiceOrderModule } from "@spartacus/s4-service/order";

@NgModule({
  declarations: [],
  imports: [
    OrderModule,
    S4ServiceOrderModule
  ]
})
export class OrderWrapperModule { }
"
`;

exports[`Spartacus S/4HANA Service Integration (S4-Service) Schematics: ng-add S4-Service feature general setup should install the appropriate dependencies 2`] = `
"import { NgModule } from '@angular/core';
import { CheckoutB2BModule } from "@spartacus/checkout/b2b";
import { CheckoutModule } from "@spartacus/checkout/base";
import { S4ServiceCheckoutModule } from "@spartacus/s4-service/checkout";

@NgModule({
  declarations: [],
  imports: [
    CheckoutModule,
    CheckoutB2BModule,
    S4ServiceCheckoutModule
  ]
})
export class CheckoutWrapperModule { }
"
`;
